--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,7 +39,8 @@
     <string name="title_tables">Tables List</string>
     <string name="button_add_users">Add users</string>
     <string name="button_submit">Submit</string>
-    <string name="button_calculate_score">Calculate score</string>
+    <string name="button_calculate_score">%s score</string>
+    <string name="attempting_connection">Attempting to communicate with the server\.\.\.</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
