--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,5 +56,7 @@
     <string name="table">Table</string>
     <string name="value">Value</string>
     <string name="column">Column</string>
+    <string name="Scores">Scores</string>
+    <string name="Rankings">Rankings</string>
 
 </resources>
